# true-north

./: .gitignore  README.md  Taskfile.yml  netlify.sh  pyproject.toml
docs/: api.md  conf.py  index.md  mallocs.md  opcodes.md  timing.md
examples/: basic.py  self.py  sort.py
tests/: conftest.py  test_group.py  test_result.py
true_north/: __init__.py  _check.py  _cli.py  _colors.py  _config.py  _group.py  _loopers.py  _result.py  _results.py  types.py
true_north/_loopers/: __init__.py  _common.py  _each.py  _memory.py  _opcode.py  _total.py
true_north/_results/: __init__.py  _base.py  _formatters.py  _malloc.py  _opcodes.py  _timing.py
